<resources>
    <string name="app_name">SkyApp</string>

    <string name="login">Вход</string>
    <string name="login_description">Войдите под вашим аккаунтом в школе Skyeng и получите доступ к мобильному личному кабинету.</string>
    <string name="login_get_code">Получить код для входа</string>
    <string name="login_no_password">Войти без пароля</string>
    <string name="login_no_password_hint">Сложный пароль или не хотите искать &#8212; войдите по коду. Или используйте обычный вход.</string>
    <string name="login_with_password">Обычный вход с паролем</string>
    <string name="login_with_password_hint">Сложный пароль или не хотите искать &#8212; используйте вход без пороля.</string>
    <string name="login_sign">Войти</string>

    <string name="code">Код</string>
    <string name="code_in">Введите код</string>
    <string name="code_resend">Выслать код повторно</string>
    <string name="code_sent_email">Введите код (отправлен на почту %s)</string>
    <string name="code_sent_phone">Введите код (отправлен на телефон %s)</string>
    <string name="code_sent_unknown">Введите код (отправлен на неизвестный источник)</string>
    <string name="code_seconds_remain">\u0020(%dc)\u0020</string>


    <string name="error_email">Неверный адрес электронной почты</string>
    <string name="error_email_password">Неверный адрес электронной почты или пароль</string>
    <string name="error_internet">Не удалось подключиться. Проверьте интернет-соединение</string>
    <string name="error_code">Неверный код</string>
    <string name="error_token">Токен устарел</string>


    <string name="please_wait">Подождите..</string>
    <string name="loading_in_progress_code">Отправка кода.</string>
    <string name="loading_in_progress_login">Выполняется вход.</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="logout">logout</string>
</resources>
