<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:layout_marginBottom="@dimen/activity_horizontal_margin"
                                             android:layout_marginEnd="@dimen/activity_horizontal_margin"
                                             android:layout_marginLeft="@dimen/activity_horizontal_margin"
                                             android:layout_marginRight="@dimen/activity_horizontal_margin"
                                             android:layout_marginStart="@dimen/activity_horizontal_margin"
                                             android:layout_marginTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/login_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_horizontal"
        android:text="@string/login_description"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="@+id/login_description"
        app:layout_constraintRight_toRightOf="@+id/login_description"
        app:layout_constraintTop_toBottomOf="@+id/login_description"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/login_email"
        app:layout_constraintRight_toRightOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <Button
        android:id="@+id/login_sign_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:text="@string/login_sign"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/login_password"
        app:layout_constraintRight_toRightOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <Button
        android:id="@+id/login_password_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/login_no_password"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="@+id/login_sign_button"
        app:layout_constraintRight_toRightOf="@+id/login_sign_button"
        app:layout_constraintTop_toBottomOf="@+id/login_sign_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <TextView
        android:id="@+id/login_mode_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/login_with_password_hint"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_mode_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>
</android.support.constraint.ConstraintLayout>