<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/login_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_horizontal"
        android:text="@string/code_sent_email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/code"
        android:inputType="numberPassword"
        app:layout_constraintLeft_toLeftOf="@+id/login_description"
        app:layout_constraintRight_toRightOf="@+id/login_description"
        app:layout_constraintTop_toBottomOf="@+id/login_description"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <Button
        android:id="@+id/login_sign_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/button_back_selector"
        android:enabled="false"
        android:text="@string/login_sign"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@+id/login_code"
        app:layout_constraintRight_toRightOf="@+id/login_code"
        app:layout_constraintTop_toBottomOf="@+id/login_code"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <Button
        android:id="@+id/login_resend_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/code_resend"
        android:textAllCaps="false"
        android:textColor="@drawable/button_color_selector"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="@+id/login_sign_button"
        app:layout_constraintRight_toRightOf="@+id/login_sign_button"
        app:layout_constraintTop_toBottomOf="@+id/login_sign_button"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

</android.support.constraint.ConstraintLayout>